--- a/src/styles/Home-Post.css
+++ b/src/styles/Home-Post.css
@@ -1,6 +1,6 @@
 .post {
   width: 472px;
-  height: 800px;
+  height: 805px;
   border: 1px solid #dbdbdb;
   border-radius: 8px;
   background-color: #fff;
